--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,16 @@ dependencies:
   flutter:
     sdk: flutter
   font_awesome_flutter: ^10.1.0
+  image_picker: ^0.8.5+3
+  video_player: ^2.4.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  integration_test:
+    sdk: flutter
   flutter_test:
     sdk: flutter
 
